--- a/task4.ipynb
+++ b/task4.ipynb
@@ -1956,6 +1956,139 @@
     "\n",
     "best_month_df.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "absl-py==2.1.0\n",
+      "altair==5.3.0\n",
+      "asttokens==2.4.1\n",
+      "astunparse==1.6.3\n",
+      "attrs==23.2.0\n",
+      "blinker==1.8.2\n",
+      "cachetools==5.4.0\n",
+      "certifi==2024.7.4\n",
+      "charset-normalizer==3.3.2\n",
+      "click==8.1.7\n",
+      "colorama==0.4.6\n",
+      "comm==0.2.2\n",
+      "contourpy==1.2.1\n",
+      "cycler==0.12.1\n",
+      "debugpy==1.8.2\n",
+      "decorator==5.1.1\n",
+      "exceptiongroup==1.2.2\n",
+      "executing==2.0.1\n",
+      "filelock==3.15.4\n",
+      "flatbuffers==24.3.25\n",
+      "fonttools==4.53.1\n",
+      "fsspec==2024.6.1\n",
+      "gast==0.6.0\n",
+      "gitdb==4.0.11\n",
+      "GitPython==3.1.43\n",
+      "google-pasta==0.2.0\n",
+      "grpcio==1.65.1\n",
+      "h5py==3.11.0\n",
+      "huggingface-hub==0.24.5\n",
+      "idna==3.7\n",
+      "ipykernel==6.29.5\n",
+      "ipython==8.26.0\n",
+      "jedi==0.19.1\n",
+      "Jinja2==3.1.4\n",
+      "joblib==1.4.2\n",
+      "jsonschema==4.23.0\n",
+      "jsonschema-specifications==2023.12.1\n",
+      "jupyter_client==8.6.2\n",
+      "jupyter_core==5.7.2\n",
+      "keras==3.4.1\n",
+      "kiwisolver==1.4.5\n",
+      "libclang==18.1.1\n",
+      "Markdown==3.6\n",
+      "markdown-it-py==3.0.0\n",
+      "MarkupSafe==2.1.5\n",
+      "matplotlib==3.9.1\n",
+      "matplotlib-inline==0.1.7\n",
+      "mdurl==0.1.2\n",
+      "ml-dtypes==0.4.0\n",
+      "namex==0.0.8\n",
+      "nest-asyncio==1.6.0\n",
+      "numpy==1.26.4\n",
+      "opt-einsum==3.3.0\n",
+      "optree==0.12.1\n",
+      "packaging==24.1\n",
+      "pandas==2.2.2\n",
+      "parso==0.8.4\n",
+      "pillow==10.4.0\n",
+      "platformdirs==4.2.2\n",
+      "prompt_toolkit==3.0.47\n",
+      "protobuf==4.25.3\n",
+      "psutil==6.0.0\n",
+      "pure-eval==0.2.2\n",
+      "py4j==0.10.9.7\n",
+      "pyarrow==17.0.0\n",
+      "pydeck==0.9.1\n",
+      "Pygments==2.18.0\n",
+      "pyparsing==3.1.2\n",
+      "pyspark==3.5.1\n",
+      "python-dateutil==2.9.0.post0\n",
+      "pytz==2024.1\n",
+      "pywin32==306\n",
+      "PyYAML==6.0.1\n",
+      "pyzmq==26.0.3\n",
+      "referencing==0.35.1\n",
+      "regex==2024.7.24\n",
+      "requests==2.32.3\n",
+      "rich==13.7.1\n",
+      "rpds-py==0.19.1\n",
+      "safetensors==0.4.4\n",
+      "scikit-learn==1.5.1\n",
+      "scipy==1.14.0\n",
+      "seaborn==0.13.2\n",
+      "six==1.16.0\n",
+      "smmap==5.0.1\n",
+      "stack-data==0.6.3\n",
+      "streamlit==1.36.0\n",
+      "tenacity==8.5.0\n",
+      "tensorboard==2.17.0\n",
+      "tensorboard-data-server==0.7.2\n",
+      "tensorflow==2.17.0\n",
+      "tensorflow-intel==2.17.0\n",
+      "tensorflow-io-gcs-filesystem==0.31.0\n",
+      "termcolor==2.4.0\n",
+      "threadpoolctl==3.5.0\n",
+      "tokenizers==0.19.1\n",
+      "toml==0.10.2\n",
+      "toolz==0.12.1\n",
+      "tornado==6.4.1\n",
+      "tqdm==4.66.5\n",
+      "traitlets==5.14.3\n",
+      "transformers==4.43.4\n",
+      "typing_extensions==4.12.2\n",
+      "tzdata==2024.1\n",
+      "urllib3==2.2.2\n",
+      "watchdog==4.0.1\n",
+      "wcwidth==0.2.13\n",
+      "Werkzeug==3.0.3\n",
+      "wrapt==1.16.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip freeze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
